<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/btnWeb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnWeb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnCamera"
        app:layout_constraintEnd_toEndOf="@+id/btnWeb"
        app:layout_constraintStart_toStartOf="@+id/btnWeb"
        app:layout_constraintTop_toBottomOf="@+id/btnWeb" />

    <Button
        android:id="@+id/btnDial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnDial"
        app:layout_constraintEnd_toEndOf="@+id/btnCamera"
        app:layout_constraintStart_toStartOf="@+id/btnCamera"
        app:layout_constraintTop_toBottomOf="@+id/btnCamera" />

    <Button
        android:id="@+id/btnCall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnCall"
        app:layout_constraintEnd_toEndOf="@+id/btnDial"
        app:layout_constraintStart_toStartOf="@+id/btnDial"
        app:layout_constraintTop_toBottomOf="@+id/btnDial" />
</androidx.constraintlayout.widget.ConstraintLayout>